# ps-lite

./: .gitignore  CMakeLists.txt  Makefile  install.sh
cmake/: generic.cmake
include/dmlc/: base.h
include/ps/internal/: env.h
make/: config.mk  ps.mk
tests/: local.sh
